<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".AgregarOfertaActivity">

    <TextView
        android:id="@+id/tituloAgregarOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:gravity="center"
        android:text="@string/agregarOferta"
        android:textAlignment="center"
        android:textColor="@color/azulLogo"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutAgregarOferta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/pop_reset"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloAgregarOferta">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nombreOferta"
                android:layout_width="33dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombreAsterisco"
                android:textColor="@color/azulLogo"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/nombreOfertaDato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="20"
                android:hint="@string/escribirNombre"
                android:gravity="start|top"
                android:textColor="@color/moradoUltimo"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:alpha="0.5"
            android:background="#585858" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/salarioOferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/salarioAsterisco"
                android:textColor="@color/azulLogo"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/salarioOfertaDato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/escribirSalario"
                android:gravity="start|top"
                android:maxLength="7"
                android:inputType="numberDecimal"
                android:textColor="@color/moradoUltimo"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:alpha="0.5"
            android:background="#585858" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/destacadoOferta"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/destacado"
                android:textColor="@color/azulLogo"
                android:textSize="17sp" />

            <Switch
                android:id="@+id/destacadoOfertaDatoAgregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/moradoUltimo"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:alpha="0.5"
            android:background="#585858" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/categoriaOferta"
                android:layout_width="29dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/categoriaAsterisco"
                android:textColor="@color/azulLogo"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerCategoria"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:entries="@array/spinnerCategoria"
                android:prompt="@string/avisoSpinner" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:alpha="0.5"
            android:background="#585858" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detallesOferta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detalles"
                android:textAlignment="viewStart"
                android:textColor="@color/azulLogo"
                android:textSize="17sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/detallesOfertaDato"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="20"
            android:gravity="start|top"
            android:hint="@string/escribirDetalles"
            android:inputType="textMultiLine"
            android:maxLength="280"
            android:textColor="@color/moradoUltimo"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAgregarOferta"
        android:layout_width="111dp"
        android:layout_height="53dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_botonlogin"
        android:text="@string/guardarCambios"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnVolverOferta"
        android:layout_width="111dp"
        android:layout_height="53dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_botonlogin"
        android:text="@string/btnVolver"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/logotiponegro_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>
