<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_intro"
    tools:context=".InicioActivity">

    <TextView
        android:id="@+id/tituloBienvenidaIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/bienvenidaIntro"
        android:textColor="@color/white"
        android:textSize="70sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/mensajeTrabajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mensajeTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/trabajoTitulo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/fondoAbajoInicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloBienvenidaIntro" />

    <ImageView
        android:id="@+id/fondoAbajoInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bottominicial_background" />

    <Button
        android:id="@+id/btnInicio"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/background_botonlogin"
        android:text="@string/empezar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fondoAbajoInicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensajeTrabajo" />

    <ImageView
        android:layout_width="87dp"
        android:layout_height="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/logotiponegro_foreground"
        android:contentDescription="@string/content" />

</androidx.constraintlayout.widget.ConstraintLayout>
